<resources>
    <string name="app_name">OffshoreView</string>
    <string name="title_activity_detailed_article">DetailActivity</string>


    <!-- Drawer fragment -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="drawer_fragment_array">
        <item>Международный бизнес</item>
        <item>Электронная коммерция</item>
        <item>Инвестиции и стартапы</item>
        <item>Каталог компаний</item>
        <item>О проекте</item>
    </string-array>

    <string-array name="swipeRefreshColors">
        <item>@color/primaryColor</item>
        <item>@color/colorPrimaryDark</item>
    </string-array>

    <!-- name fragment -->
    <string name="name_fragment_offshore">Международный бизнес</string>
    <string name="name_fragment_emoney">Электронная коммерция</string>
    <string name="name_fragment_venture">Инвестиции и стартапы</string>
    <string name="name_fragment_catalog">Каталог компаний</string>
    <string name="name_fragment_info">О проекте</string>

    <!-- title detail activity -->
    <string name="title_detail_activity">Статья</string>

    <!-- intent article in detail activity -->
    <string name="article_title_intent">article_title_intent</string>
    <string name="article_content_intent">article_content_intent</string>
    <string name="article_img_intent">article_img_intent</string>
    <string name="article_url_intent">article_url_intent</string>
    <string name="progress_bar_title">Подождите</string>
    <string name="progress_bar_content">Идет загрузка...</string>


    <!-- content fragmentInfo -->
    <string name="content_info_blog"><![CDATA[
        <p>Наш портал создан для людей, готовых прилагать усилия для достижения личного успеха и финансовой свободы. В их число входят предприниматели и инвесторы, обладающие определенным международным бизнес-опытом и только начинающие познавать основы международной диверсификации. Мы готовы делиться с ними общеобразовательной и новостной финансово-инвестиционной информацией, а взамен рассчитываем получать комментарии, отзывы о личном опыте ведения бизнеса или инвестирования, впечатления от международного партнерства и т.п.</p>
        <p><strong><em>Чем заняться деятельным предпринимателям</em></strong></p>
        <p>На страницах ресурса представлена информация:</p>
        - о проблемах международной экономики и валютных войнах;<br>
        - о перспективных вариантах капиталовложений;<br>
        - об оптимизации налогообложения, защите активов и валютной диверсификации;<br>
        - о технологических трендах будущего;<br>
        - о рисках венчурных инвестиций;<br>
        - о венчурных ангелах, инкубаторах и фондах;<br>
        - о достоинствах децентрализованных платежных систем;<br>
        - о вдохновляющих перспективах биткоиномики и цифровых валют вообще;<br>
        - о прибыльных направлениях электронной коммерции;<br>
        - о финансовой безопасности.<br>
        <p><strong><em>Рука помощи, или От слова – к делу</em></strong></p>
        <p>Читателей, вдохновившихся перспективой накопления, сохранения и приумножения капитала, и профессионалов, способных помочь реализовать победные планы, приглашаем заглянуть в наш каталог. Здесь мы бесплатно размещаем контактные данные и информацию о деятельности специалистов, компаний и организаций соответствующего профиля деятельности.</p>
        <p>Экспертам также предлагается эффективно прорекламировать предоставляемые услуги в формате тематической статьи или привлекательного баннера. Пока мы размещаем рекламу абсолютно бесплатно, но все-таки рассчитываем на благодарность в виде лайка или репоста заинтересовавших профессионала публикаций.</p>
        <p><strong><em>О планах и перспективах</em></strong></p>
        <p>Высокая турбулентность информационной среды  и множественность экспертных мнений увеличивают спрос на качественно поданную, актуальную справочную информацию. Поэтому в ближайшем будущем, ориентируясь на пожелания посетителей, мы создадим отдельный блок – для публикации справочных материалов, толкования  специализированных терминов и т.п.</p>
        <p>Мы намерены сделать портал максимально полезным для постоянных посетителей. Вас интересуют заметные оффлайновые события определенного профиля? Мы обязуемся отслеживать и своевременно информировать вас о тематических конференциях, семинарах, съездах и форумах. А желающим принять в них участие предоставим более подробную информацию о программе, стоимости участия, контактных данных организаторов и прочих необходимых подробностях.</p>
        <p>Мы готовы не только обеспечивать вас своими знаниями, актуальными новостями и проверенными профессиональными контактами. Посетителей, имеющих контрмнения по представленным в проекте публикациям, мы просим без стеснения делиться ими, авторы статей могут самостоятельно разместить свои работы под своим именем. А от желающих дополнить теоретические размышления собственным практическим опытом, ждем конкретных рекомендаций.
        Читайте, комментируйте, советуйте и предлагайте!  Вместе мы способны решить любые проблемы бизнеса, возникающие в период кризисов локального или глобального характера.</p>
    ]]>
    </string>
    <string name="info_fragment_title">О ПРОЕКТЕ</string>

    <!-- adMob -->
    <string name="ad_mob_banner_fragment">ca-app-pub-9894693655868902/4872979673</string>
    <string name="ad_mob_banner_detail_activity">ca-app-pub-9894693655868902/5259599274</string>

</resources>
